# finterm

./: .gitignore  Dockerfile  LICENSE  README.md  finterm.ps1  finterm.sh  setup.sh  start.sh  updates.json
.githooks/: post-commit  pre-commit
.github/: CONTRIBUTING.md  MAINTAINERS.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  improvement.md  performance_issues.md
.github/scripts/: generate_updates_manifest.py
.github/workflows/: build-cpp.yml  release.yml  test-setup.yml
docs/: ARCHITECTURE.md  CODE_OF_CONDUCT.md  COMMERCIAL_LICENSE.md  CONTRIBUTING.md  CPP_CONTRIBUTOR_GUIDE.md  CRYPTO_WALLET_CONNECT.md  GETTING_STARTED.md  PYTHON_CONTRIBUTOR_GUIDE.md
docs/how-to/: README.md  ai-features.md  capabilities.md  quant-features.md
docs/translations/: README.de.md  README.es.md  README.fr.md  README.hi.md  README.ja.md  README.ko.md  README.zh-CN.md
fincept-qt/: CMakeLists.txt  CMakePresets.json  DATAHUB_ARCHITECTURE.md
fincept-qt/cmake/: prune_scripts_junk.cmake
fincept-qt/docs/design/: ai-stack-free-local.md  local-ai-engine.md  qt-ffmpeg-hwaccel-memo.md
fincept-qt/packaging/linux/: AppImageBuilder.yml  AppRun  fincept-terminal.appdata.xml  fincept-terminal.desktop
fincept-qt/plans/: crypto-center-future-phases.md  crypto-center-security-walkthrough.md  crypto-center-wallet-connect.md
fincept-qt/resources/: app.rc.in  requirements-numpy2.txt
fincept-qt/resources/ai/: capabilities.json
fincept-qt/resources/knowledge/: abbreviations.json
fincept-qt/resources/knowledge/cases/: _index.json  case-archegos-2021.md  case-asian-crisis-1997.md  case-black-monday-1987.md  case-burry-cds-2007.md  case-covid-march-2020.md  case-dotcom-2000.md  case-enron-2001.md  case-fed-pivot-2022.md  case-flash-crash-2010.md  case-gamestop-2021.md  case-hunt-silver-1980.md  case-ltcm-1998.md  case-nickel-lme-2022.md  case-soros-pound-1992.md  case-svb-2023.md  case-terra-luna-2022.md  case-uk-gilt-2022.md  case-volkswagen-2008.md  case-volmageddon-2018.md  case-yen-carry-2024.md
fincept-qt/resources/knowledge/concepts/: _index.json  behavioral-biases.md  bonds-primer.md  commodities-basis.md  credit-markets.md  crypto-on-chain.md  currency-fx.md  dark-pools-order-flow.md  earnings-season.md  fed-policy.md  futures-mechanics.md  greeks-deep-dive.md  inflation-and-rates.md  macro-cycles.md  market-microstructure.md  options-basics.md  reading-balance-sheet.md  reading-financials.md  sector-rotation.md  tax-basics.md  yield-curve.md
fincept-qt/resources/knowledge/formulas/: _index.json  beta-formula.md  black-scholes.md  cagr.md  capm.md  compound-interest.md  cvar.md  dcf.md  duration-formula.md  ev-ebitda-formula.md  free-cash-flow-formula.md  gordon-growth.md  information-ratio.md  kelly-criterion.md  max-drawdown.md  pe-formula.md  peg-formula.md  position-size-formula.md  put-call-parity-formula.md  r-squared.md  roe-formula.md  sharpe-ratio.md  sortino-ratio.md  treynor-ratio.md  var-parametric.md  wacc.md
fincept-qt/resources/knowledge/glossary/: _index.json  alpha.md  authorized-participant.md  average-true-range.md  backwardation.md  basis.md  benchmark.md  beta.md  bid-ask-spread.md  breakeven-inflation.md  buyback-yield.md  calendar-spread.md  carry-trade.md  circuit-breaker.md  contango.md  convexity.md  correlation.md  coupon-rate.md  covered-call.md  credit-spread.md  cvar.md  dark-pool.md  days-to-cover.md  dcf.md  debt-to-equity.md  delta.md  drawdown.md  (+101 more)
fincept-qt/scripts/: GOVERNMENT_DATA_SOURCES.md  README.md  cftc_data.py  cme_data.py  congress_gov_data.py  exchange_sessions.py  extract_article.py  finnhub_data.py  futures_router.py  gen_capabilities_doc.py  oge_cabinet_data.py  pre_ipo_valuation_seed.json  sec_form_d_data.py  sec_known_ciks.py  sec_nport_marks.py  sec_s1_pipeline.py  senate_disclosures_data.py  stooq_data.py  taiwan_market_connector.py  test_exchange_sessions.py  yfinance_data.py
fincept-qt/scripts/ai_quant_lab/: README.md  _real_data.py  qlib_advanced_models.py  qlib_meta_learning.py  qlib_rl.py
fincept-qt/scripts/exchange/: resolve_kraken_symbols.py
fincept-qt/scripts/voice/: piper_tts.py  whisper_stt.py
fincept-qt/src/ai_chat/: AiChatBubble.cpp  AiChatBubble.h  AiChatScreen.cpp  AiChatScreen.h  ChatPersonas.h  EmbeddingsClient.cpp  EmbeddingsClient.h  HearthService.cpp  HearthService.h  HearthSupervisor.cpp  HearthSupervisor.h  LlmService.cpp  LlmService.h  LlmUrl.h
fincept-qt/src/app/: DockScreenRouter.cpp  DockScreenRouter.h  MainWindow.cpp  MainWindow.h  main.cpp
fincept-qt/src/auth/: AuthManager.cpp  AuthManager.h  AuthService.cpp  AuthService.h  AuthTypes.h  InactivityGuard.h  SessionGuard.cpp  SessionGuard.h
fincept-qt/src/datahub/: DataHub.cpp  DataHub.h  DataHubMetaTypes.cpp  DataHubMetaTypes.h  TopicPolicy.h
fincept-qt/src/mcp/: McpClient.cpp  McpClient.h  McpClientBase.h  McpHttpClient.cpp  McpHttpClient.h  McpInit.cpp  McpManager.cpp  McpManager.h  McpOAuth.cpp  McpOAuth.h  McpOAuthAuthCode.cpp  McpOAuthAuthCode.h  McpProvider.cpp  McpProvider.h  McpService.cpp  McpService.h  McpTypes.h  UntrustedContent.cpp  UntrustedContent.h
fincept-qt/src/python/: PythonRunner.cpp  PythonRunner.h  PythonWorker.cpp  PythonWorker.h
fincept-qt/src/screens/: ComingSoonScreen.cpp
fincept-qt/src/storage/: StorageManager.cpp
fincept-qt/src/trading/: AccountDataStream.cpp  AccountDataStream.h  ExchangeSession.cpp  TradingTypes.h  UnifiedTrading.cpp
fincept-qt/tests/: CMakeLists.txt
fincept-qt/tests/cmake/: test_prune_scripts_junk.cmake
fincept-qt/tests/core/: test_event_bus.cpp
fincept-qt/tests/services/video/: test_live_hls_proxy.cpp
fincept-qt/tests/ui/: acceptance_checklist.md
plans/: PLAN_KNOWLEDGE_ENRICHMENT.md  PLAN_POWER_TRADER.md  PLAN_PRE_IPO_PRIVATE_EQUITY.md  ai-native-roadmap.md  ai-stack-free-local.md  ai-stack.md  implementation-status.md  local-ai-engine.md  qt-ffmpeg-hwaccel-memo.md  testing-strategy.md
tools/: reset.sh  update_todays_commits.py
tools/local_stub/: README.md  server.py  test_server.py
tools/systemd/: README.md  fincept-stub.service  finterm-stub.service
(+794 files in other folders)
